# opusxml

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.rst  pixi.toml  pyproject.toml  requirements-docs.txt  requirements-rtd.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: condapackage.yml  pythonpackage.yml
ci/: cli-help.ps1
conda-recipe/: meta.yaml
docs/source/: cli.rst  conf.py  index.rst
docs/source/api/: index.rst  modules.rst  opusxml.rst
docs/source/cli/: cli.convert.txt  cli.info.txt  cli.opusxml.txt
opusxml/: __init__.py  _version.py
opusxml/cli/: opusxml.py
opusxml/core/: api.py  opus.py
opusxml/tools/: fips_mapping.py
tests/: test_cli.py
