[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opusxml"
authors = [
  {name = "Michael Rahnis", email = "mike@topomatrix.com"},
]
description = "Python library to read and convert OPUSXML files"
dynamic = ["version"]
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["cross-section, topography, survey"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]

requires-python = ">=3.8"

dependencies = [
"lxml",
"click",
"pint",
"fiona",
"shapely",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]
dev = [
    "numpydoc",
    "twine",
]

[project.urls]
Homepage = "https://topomatrix.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/mrahnis/opusxml/opusxml.git"
Changelog = "https://github.com/mrahnis/opusxml/blob/main/CHANGELOG.md"

[project.scripts]
opusxml = "opusxml.cli.opusxml:cli"

[tool.setuptools.dynamic]
version = {attr = "opusxml._version.__version__"}

[tool.mypy]
python_version = "3.8"
files = ["opusxml"]
show_error_codes = true
pretty = true
strict = true
local_partial_types = true
warn_unreachable = true
